--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Perosnal</title>
-<style>
-html, body {
-    margin: 0;
-    height: 100%;
-}
-embed {
-    width: 100%;
-    height: 100%;
-}
-</style>
+<title>Personal</title>
+<script>
+window.onload = function() {
+    window.location.replace("Personal.pdf?cache=" + new Date().getTime());
+};
+</script>
 </head>
 <body>
-<embed src="Personal.pdf" type="application/pdf">
 </body>
 </html>
