--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Personal</title>
-<script>
-window.onload = function() {
-    window.location.replace("Personal.pdf?cache=" + new Date().getTime());
-};
-</script>
+  <meta http-equiv="refresh" content="0; url=https://open.spotify.com/track/4spyMABCbID9Tem2ukcbnz">
 </head>
-<body>
-</body>
+<body></body>
 </html>
