--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Personale</title>
+<title>Personal</title>
 
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
@@ -26,7 +26,7 @@ iframe {
 
 <script>
     const timestamp = new Date().getTime();
-    document.getElementById("pdfViewer").src = "Personale.pdf?t=" + timestamp;
+    document.getElementById("pdfViewer").src = "Personal.pdf?t=" + timestamp;
 </script>
 
 </body>
