--- a/index.html
+++ b/index.html
@@ -2,32 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Personal</title>
-
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-
-<style>
-html, body {
-    margin: 0;
-    height: 100%;
-}
-iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-</style>
+<script>
+window.location.replace("./Personal.pdf?" + Date.now());
+</script>
 </head>
 <body>
-
-<iframe id="pdfViewer"></iframe>
-
-<script>
-    const timestamp = new Date().getTime();
-    document.getElementById("pdfViewer").src = "Personal.pdf?t=" + timestamp;
-</script>
-
 </body>
 </html>
