--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>Personal</title>
+
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<script>
-window.location.replace("./Personal.pdf?" + Date.now());
-</script>
+
+<style>
+html, body {
+    margin: 0;
+    height: 100%;
+}
+embed {
+    width: 100%;
+    height: 100%;
+}
+</style>
 </head>
 <body>
+
+<embed id="pdfViewer" type="application/pdf">
+
+<script>
+document.getElementById("pdfViewer").src = "Personal.pdf?" + Date.now();
+</script>
+
 </body>
 </html>
